package gproto;

message MSG_C2G_HeartBeat
{
}

message MSG_G2C_HeartBeat
{
}

message MSG_C2G_StartGame
{
	required bytes rolename = 1;
}

// 准备
message MSG_C2G_Prepare
{
}
message MSG_G2C_Prepare
{
	enum EResult
	{
		OK = 1;
		ERR = 2;
	}
	required EResult ret = 1;
}

message MSG_G2C_PrepareGround
{
}

message MSG_C2G_EnterGround
{
}
message MSG_G2C_EnterGround
{
	enum EResult
	{
		OK = 1;
		ERR = 2;
	}
	required EResult ret = 1;
}
message MSG_C2G_LeaveGround
{
}
message MSG_G2C_LeaveGround
{
	enum EResult
	{
		OK = 1;
		ERR = 2;
	}
	required EResult ret = 1;
}

// 获取场景数据
message MSG_C2G_GetGroundInfo
{
}
// 格子
message Info_Grid
{
	required int32 sn = 1;
	required int32 x = 2;
	required int32 y = 3;
}
// 场景对象
message Info_GObject
{
	enum EType
	{
		None = 0;
		Still = 1;
		Walkable = 2;
	}
	required EType type = 1;
	required int32 indexid = 2;
	required int32 sn = 3;
	required int32 x = 4;
	required int32 y = 5;
	required int32 hp = 6;
	required int32 maxhp = 7;
	required int32 sp = 8;
	required int32 level = 9;
	required int32 campid = 10;
}
message MSG_G2C_GetGroundInfo
{
	required int32 wgcount = 1;
	required int32 hgcount = 2;
	repeated Info_Grid grids = 3;
	repeated Info_GObject gobjects = 4;
}







